--- a/styles.css
+++ b/styles.css
@@ -58,12 +58,15 @@ body {
     cursor: default;
 }
 
+.container {
+    width : 80%;
+}
+
 .calendar {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     overflow: hidden;
-    width: 80%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -272,6 +275,7 @@ body {
     .calendar {
         width: 100%; 
         float: none; 
+        border-radius: 0px;
     }
 
     .mobile-nav-buttons {
