--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ body {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    overflow: scroll;
+    overflow: hidden;
     height: 100%;
     display: flex;
     flex-direction: column;
