--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body {
     border-collapse: collapse;
     background-color: white; 
     border-radius: 10px; 
-    overflow: scroll; 
+    overflow: hidden; 
     box-shadow: 0 4px 8px rgba(0,0,0,0.15);
 }
 
@@ -83,7 +83,7 @@ body {
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
-    overflow-y: hidden;
+    overflow-y: scroll;
 }
 
 .calendar-weekdays {
