--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,15 @@ body {
     width : 80%;
 }
 
+.plan {
+    width : 100%;
+}
+
+.test {
+    width: 80%;
+    height: auto;
+}
+
 .calendar {
     background-color: #fff;
     border-radius: 10px;
@@ -264,6 +273,10 @@ body {
 
 .mobile-nav-buttons {
     display: none;
+}
+
+#title2 {
+    margin: 0;
 }
 
 
